Fix unreachable commit alignment

--- a/app/styles/ui/history/_expandable-commit-summary.scss
+++ b/app/styles/ui/history/_expandable-commit-summary.scss
@@ -219,7 +219,8 @@
   .commit-unreachable-info {
     display: flex;
     align-items: center;
-    margin-top: var(--spacing);
+    padding: var(--spacing);
+    padding-top: 0;
 
     .octicon {
       margin-right: var(--spacing-half);
